--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/router": "^8.0.0",
     "bootstrap": "^4.4.1",
     "core-js": "2",
-    "jquery": "1.9.1 - 3",
+    "jquery": "3.4",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
